overlays/local/schema-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schema-registry-ingress
  namespace: schema-registry
spec:
  ingressClassName: nginx
  rules:
  - host: schema-registry.local
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: schema-registry
              port:
                number: 8081
